--- a/web-wallet/index.html
+++ b/web-wallet/index.html
@@ -151,7 +151,7 @@
                 <div class="tab-pane fade show active" id="tab-transfer" role="tabpanel">
                     <div class="mb-3">
                         <label for="tx-amount" class="form-label">Amount</label>
-                        <input type="number" class="form-control" id="tx-amount" placeholder="0">
+                        <input type="number" class="form-control" id="tx-amount" placeholder="0" min="0" max="65535" step="1">
                     </div>
                 </div>
 
