--- a/web-wallet/index.html
+++ b/web-wallet/index.html
@@ -6,7 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tau Testnet Web Wallet</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css?v=2">
+    <!-- Google Fonts -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&family=Fira+Code:wght@400;500&display=swap"
+        rel="stylesheet">
+
+    <!-- CodeMirror Styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.css">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/theme/material-ocean.min.css">
+
+    <link rel="stylesheet" href="style.css?v=3">
 
     <!-- Load BLS library -->
     <!-- Import Map for Noble Crypto -->
@@ -121,13 +131,18 @@
             <div class="mb-3">
                 <label for="tx-recipient" class="form-label">Recipient Public Key</label>
                 <div class="input-group">
-                    <input type="text" class="form-control" id="tx-recipient" list="known-accounts"
-                        placeholder="96-char hex">
-                    <datalist id="known-accounts"></datalist>
-                    <button class="btn btn-outline-secondary" type="button" id="btn-refresh-accounts"
-                        title="Fetch known accounts from node">
-                        &#x21bb; <!-- Refresh Icon -->
+                    <input type="text" class="form-control" id="tx-recipient"
+                        placeholder="96-char hex (Or select from dropdown ->)">
+                    <button class="btn btn-outline-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false" id="btn-refresh-accounts" title="Fetch known accounts from node">
+                        &#x21bb; Known
                     </button>
+                    <ul class="dropdown-menu dropdown-menu-end" id="known-accounts-menu"
+                        style="max-height: 300px; overflow-y: auto;">
+                        <li>
+                            <h6 class="dropdown-header">Known Accounts (Refresh to fetch)</h6>
+                        </li>
+                    </ul>
                 </div>
             </div>
 
@@ -151,7 +166,8 @@
                 <div class="tab-pane fade show active" id="tab-transfer" role="tabpanel">
                     <div class="mb-3">
                         <label for="tx-amount" class="form-label">Amount</label>
-                        <input type="number" class="form-control" id="tx-amount" placeholder="0" min="0" max="65535" step="1">
+                        <input type="number" class="form-control" id="tx-amount" placeholder="0" min="0" max="65535"
+                            step="1">
                     </div>
                 </div>
 
@@ -163,8 +179,10 @@
                             <button class="btn btn-sm btn-outline-primary" type="button" id="btn-random-rule">Random
                                 Rule</button>
                         </div>
-                        <textarea class="form-control font-monospace" id="tx-rule" rows="3"
-                            placeholder="e.g. always (o5[t] = { #b1 }:bv)."></textarea>
+                        <div class="editor-container">
+                            <textarea class="form-control" id="tx-rule"
+                                placeholder="e.g. always (o5[t] = { #b1 }:bv)."></textarea>
+                        </div>
                         <div id="rule-validation-status" class="form-text mt-1"></div>
                     </div>
                 </div>
@@ -173,9 +191,17 @@
                 <div class="tab-pane fade" id="tab-custom" role="tabpanel">
                     <div class="mb-3">
                         <label for="tx-custom" class="form-label">Custom Operations</label>
-                        <textarea class="form-control font-monospace" id="tx-custom" rows="3"
-                            placeholder="Key:Value (e.g. 5:my_data)"></textarea>
-                        <div class="form-text">One operation per line. Keys must be &ge; 5.</div>
+                        <div class="editor-container">
+                            <textarea class="form-control" id="tx-custom"
+                                placeholder="Key:Value (e.g. 5:my_data)"></textarea>
+                        </div>
+                        <div class="form-text mt-2">
+                            <strong>Format:</strong> <code>Key:Value</code> (One operation per line).<br>
+                            <em>Note: Keys must be &ge; 5.</em><br>
+                            <strong>Examples:</strong><br>
+                            <code>5:Hello World</code><br>
+                            <code>6:CustomDataHex</code>
+                        </div>
                         <div id="custom-validation-status" class="form-text mt-1"></div>
                     </div>
                 </div>
@@ -183,17 +209,26 @@
 
             <!-- Fee Limit removed -->
 
-            <button id="btn-send">Sign & Send Transaction</button>
+            <button id="btn-send" class="w-100 mt-4 btn-lg btn-primary">Sign & Send Transaction</button>
         </section>
 
         <section id="log-panel">
             <h2>Logs</h2>
             <div id="logs"></div>
-            <button id="btn-clear-logs">Clear Logs</button>
+            <div class="d-flex gap-2">
+                <button id="btn-clear-logs" class="btn-sm">Clear Logs</button>
+                <button id="btn-copy-logs" class="btn-sm btn-outline-secondary">Copy Logs</button>
+                <button id="btn-get-state" class="btn btn-sm btn-outline-primary ms-auto">Get Tau State</button>
+            </div>
         </section>
     </div>
 
     <!-- Main Logic -->
+    <!-- Scripts -->
+    <!-- CodeMirror Base & Modes -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/codemirror.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.13/addon/mode/simple.min.js"></script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="app.js"></script>
 </body>
